# backend

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  =3.1.1  API_DOCUMENTATION.md  AUDIO_STOP_README.md  AUDIO_STREAM_SCORING.md  AUTHENTICATION.md  CI_CD.md  COMMAND_WORKFLOW_README.md  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  ENHANCED_CONTEXT_PROCESSOR.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  PHONE_API.md  README.md  REFACTORING_SUMMARY.md  RESTRUCTURE_SUMMARY.md  WAKE_WORD_DETECTION.md  WEBHOOK_USAGE.md  __init__.py  alembic.ini  audio_stream_scorer.py  command_processor.py  command_workflow.py  context_config.py  context_processor.py  context_processor_new.py  conversation_endpoints.py  coverage.xml  db.py  demo_auth.sh  demo_results.json  docker-compose.yml  (+42 more)
.aws/: task-definition.json
.deployment/: requirements.txt
.deployment/app/api/: __init__.py
.deployment/app/api/v1/: __init__.py
.deployment/app/api/v2/: interaction_router.py  streams_router.py
.deployment/app/core/: __init__.py  config.py  mira_logger.py
.deployment/app/db/: DATABASE.md
.deployment/app/models/: action.py  conversation.py  person.py
.deployment/app/services/: command_processor.py  context_processor.py  multi_stream_processor.py  sentence_processor.py  service_factory.py
.deployment/app/tests/: conftest.py
.deployment/app/tests/integration/: test_api.py
.deployment/app/tests/unit/: test_services.py
.github/workflows/: cd.yml  ci-cd-pipeline.yml  ci.yml  development.yml  production.yml
alembic/: env.py
alembic/versions/: fd64713d5241_initial_migration.py
app/: __init__.py  main.py  test_auth_core.py
app/alembic/: env.py
app/alembic/versions/: add_users_table.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  assistant.py  auth.py  auth_router.py  conversation_router.py  interaction_router.py  networks.py  persons_router.py  service_router.py  streams_router.py  tasks.py  websocket.py
app/api/v2/: __init__.py  auth_router.py  conversation_router.py  interaction_router.py  persons_router.py  service_router.py  streams_router.py
app/core/: __init__.py  auth.py  config.py  constants.py  deps.py  logging.py  mira_logger.py  oauth.py  security.py  websocket.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/models/: __init__.py  action.py  client.py  conversation.py  interaction.py  network.py  person.py  user.py
app/schemas/: action.py  auth.py  client.py  conversation.py  interaction.py  network.py  person.py  user.py
app/services/: __init__.py  ai_engine.py  auth.py  command_processor.py  command_service.py  context_processor.py  context_service.py  inference_processor.py  inference_service.py  ml_model_manager.py  multi_stream_processor.py  oauth_service.py  sentence_processor.py  service_factory.py  service_registry.py  webhook_dispatcher.py
app/tests/: __init__.py  conftest.py  test_assistant.py  test_auth.py  test_main.py  test_networks.py  test_refactored_services.py  test_service_registry.py  test_tasks.py  test_webhook.py  test_websocket.py
app/tests/integration/: test_api.py  test_auth_endpoints.py
app/tests/unit/: test_auth.py  test_config.py  test_database.py  test_models.py  test_services.py
docker/: Dockerfile.dev  Dockerfile.lambda  Dockerfile.prod  docker-compose.dev.yml
docs/: database.md  database_old.md  deployment.md
examples/: README.md  webhook_client_example.py
legacy_backup/: ml_model_manager.py
legacy_backup/processors/: inference_processor.py  sentence_processor.py
legacy_backup/routers/: persons_router.py
legacy_backup/schemas/action_processing/: structured_output.json
legacy_backup/schemas/command_processing/: system_prompt.txt
legacy_backup/tests/: test_api_routes.py
legacy_code/: db.py  mira.py  ml_model_manager.py
legacy_code/routers/: conversation_router.py  interaction_router.py  streams_router.py
legacy_code/tests/: validate_tuning_system.py
legacy_code/tuning/: acquire_datasets.py  fine_tune_models.py
plans/: 01-network-structure.md  02-database-design.md  03-api-architecture.md  04-inference-pipeline.md  05-audio-processing.md  07-migration-plan.md  AWS_DEPLOYMENT_GUIDE.md  CI_CD.md  README.md
processors/: command_processor.py  context_processor.py  inference_processor.py  multi_stream_processor.py  sentence_processor.py
routers/: conversation_router.py  interaction_router.py  persons_router.py  service_router.py  streams_router.py
schemas/action_processing/: system_prompt.txt
scripts/: cleanup-coverage.sh  deploy-lambda.sh  deploy.sh  init_data.py  migrate-db-aws.sh  migrate-db.sh  run_server.sh  setup-lambda.sh  test-container-deployment.sh
scripts/deployment/: deploy-application-container.sh  deploy-application.sh  deploy-infrastructure.sh  health-check.sh  migrate-database.sh  notify-deployment.sh
scripts/utilities/: aws-utils.sh  logging.sh  validation.sh
terraform/: main.tf  variables.tf
tests/: test_api_minimal.py  test_api_routes.py  test_audio_stream_scorer.py  test_command_processor.py  test_command_workflow.py  test_command_workflow_api.py  test_ml_model_manager.py  test_multi_stream_processor.py  test_wake_word_api.py  test_wake_word_detector.py  validate_tuning_system.py
tuning/: README.md  acquire_datasets.py  fine_tune_models.py
tuning/configs/: lm_studio_server_config.json
tuning/datasets/: command_processing.jsonl  data_extraction.jsonl
tuning/falcon-40b-instruct/: model_config.json
tuning/llama-2-7b-chat/: model_config.json
tuning/llama-2-7b-chat-hf-function-calling-v3/: model_config.json
tuning/tiiuae-falcon-40b-instruct/: model_config.json
